// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabList renders correctly stretched tab list 1`] = `
<div
  className="tabs--wrapper stretched"
  id=""
>
  <ul
    className="tabs-list"
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tab--wrapper active"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
    <li
      aria-disabled={false}
      aria-selected={false}
      className="tab--wrapper"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        Second
      </a>
    </li>
    <li
      aria-disabled={false}
      aria-selected={false}
      className="tab--wrapper"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        Third
      </a>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly with activeTabId 1`] = `
<div
  className="tabs--wrapper Compact"
  id=""
>
  <ul
    className="tabs-list"
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={false}
      className="tab--wrapper"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tab--wrapper active"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        Second
      </a>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly with children 1`] = `
<div
  className="tabs--wrapper Compact"
  id=""
>
  <ul
    className="tabs-list"
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tab--wrapper active"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly with className 1`] = `
<div
  className="tabs--wrapper test Compact"
  id=""
>
  <ul
    className="tabs-list"
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tab--wrapper active"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly with id 1`] = `
<div
  className="tabs--wrapper Compact"
  id="test"
>
  <ul
    className="tabs-list"
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tab--wrapper active"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly with size 1`] = `
<div
  className="tabs--wrapper Compact"
  id=""
>
  <ul
    className="tabs-list lg"
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tab--wrapper active"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
    <li
      aria-disabled={false}
      aria-selected={false}
      className="tab--wrapper"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        Second
      </a>
    </li>
  </ul>
</div>
`;

exports[`TabList renders correctly with tabType 1`] = `
<div
  className="tabs--wrapper stretched"
  id=""
>
  <ul
    className="tabs-list"
    role="tablist"
    tabIndex={0}
  >
    <li
      aria-disabled={false}
      aria-selected={true}
      className="tab--wrapper active"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        First
      </a>
    </li>
    <li
      aria-disabled={false}
      aria-selected={false}
      className="tab--wrapper"
      id=""
      role="tab"
    >
      <a
        className="tab-inner"
        onClick={[Function]}
      >
        Second
      </a>
    </li>
  </ul>
</div>
`;
